--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo-container">
-                <img src="media/logo.png" alt="Logo Bref Barbershop" class="logo-img">
+                <img src="media/82472597-9497-419A-A50A-9B6A5C3CCE8F.png" alt="Logo Bref Barbershop" class="logo-img">
                 <span class="logo-text">Bref Barbershop</span>
             </div>
             <button class="menu-toggle" aria-label="Menu">
