--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@
                         <div class="contact-icon">📞</div>
                         <div class="contact-details">
                             <h3>Téléphone</h3>
-                            <p>01 23 45 67 89</p>
+                            <p>09 83 46 55 24</p>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">✉️</div>
+                        <div class="contact-icon">⌚️</div>
                         <div class="contact-details">
-                            <h3>Email</h3>
-                            <p>contact@bref-barbershop.fr</p>
+                            <h3>Reseaux</h3>
+                            <p>instagram : Brefbarbershop</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">🕐</div>
                         <div class="contact-details">
                             <h3>Horaires</h3>
-                            <p>Lundi - Samedi : 9h00 - 19h00<br>Dimanche : Fermé</p>
+                            <p>Mardi - Dimanache : 10h00 - 20h00<br>Lundi : Fermé</p>
                         </div>
                     </div>
                 </div>
